src/main/java/org/example/mobble/_util/error/ex/Exception401.java
package org.example.mobble._util.error.ex;

public class Exception401 extends RuntimeException {
  public Exception401(String message) {
    super(message);
  }
}
